# Playground-Model-Testing

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  server.py
client/: .dockerignore  Dockerfile  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/api/get-models-and-tests/: route.ts
client/app/api/run-tests/: route.ts
client/app/results/: page.tsx
client/components/: confirmer-model-selector.tsx  deployment-config.tsx  export-buttons.tsx  model-results.tsx  model-selector.tsx  result-card.tsx  test-selector.tsx  theme-provider.tsx  theme-toggle.tsx
client/lib/: store.ts  types.ts
server_src/: get_models_tests_route.py  router.py  run_tests_route.py
src/clients/: clients.py
src/confirmations/: openai_confirmations.py
src/pixels/: pixel_maker.py
src/runners/: runners.py
src/tests/: abstract_tests.py  basic_param_values_test.py  image_base64_test.py  image_urls_test.py  response_models.py  standard_tests.py  standard_text_test.py  structured_json_test.py  tool_calling_with_tool_choice_test.py
src/utils/: constants.py  credentials.py  models.py
