[project]
name = "playground-model-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-server-sdk>=0.0.27",
    "fastapi[standard]>=0.121.0",
    "openai>=2.2.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "yfinance>=0.2.66",
]
